changed the css to get rid of a funny alignment issue

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -164,8 +164,7 @@ body {
 #comic #blurb {
   width: 800px;
   color: #000000;
-  padding: 10px;
-  margin-top: 15px;
+  margin-top: 10px;
   position: relative;
   z-index: 0;
 }
